--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
 
     <div class="page" id="page6">
         <img src="./3.jpg" alt="Cute Love">
-        <h1>Every year, you grow wiser, kinder, and even more amazing. Happy birthday, my boy ♡</h1>
-        <p>Just you, being effortlessly my favorite view.</p>
+        <h1>hiiiiii you're so so so so so so so so so so so prettyyyy 💞🦋💗</h1>
+        <!-- <p>Just you, being effortlessly my favorite view.</p> -->
         <button class="button" onclick="goToPage(7)">♡</button>
     </div>
 
