--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://i.ibb.co.com/hXZsYxZ/heart.png">
-    <title>Happy Birthday My Boyfriend!!</title>
+    <title>Happy Birthday My Mirlfriend!!</title>
     <style>
         * {
             box-sizing: border-box;
@@ -239,14 +239,14 @@
     </div>
 
     <div class="page" id="page7">
-        <img src="./Capybara-duo-looking-camera-closeup.jpg" alt="Cute Love">
-        <h1>I swear every time we take a photo together, I end up liking you even more.</h1>
-        <p>It's your day, my boyfriend. Scroll down, I left a little letter for you 🎂</p>
+        <img src="./4.jpg" alt="Cute Love">
+        <h1>i wish you knew how much i love youu and i hope we can be together and always be there for each other </h1>
+        <!-- <p>It's your day, my boyfriend. Scroll down, I left a little letter for you 🎂</p> -->
         <button class="button" onclick="goToPage(8)">♡</button>
     </div>
 
     <div class="page" id="page8">
-        <h2>Happy birthday my lovee-!! ૮꒰ྀི ੭˶ᵔ ᵕ ᵔ ྀི꒱੭</h2>
+        <h2>SENDING TO THE MOST BEAUTIFUL AND FUNNIEST GIRL NAMED FITRIANA HARIYANI </h2>
         <div class="letter-container">
             <div class="letter" id="letterText"></div>
         </div>
@@ -262,12 +262,9 @@
     <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
 
     <script>
-        const fullLetter = `It's your special day, wish you all the best sayang. Selamat bertumbuh jauh lebih baik sayangku cintaaku, panjang umur, a wish for you on your birthday, whatever you ask may you receive, whatever you seek may you find, whatever you wish may it be fulfilled on your birthday and together, I hope you will walk on this journey knowing that you belong babe, I hope even if things sometime do not go your way you will stop trying, you will not give up on yourself and on your toughest days, I hope you will reminding your self of this word "you deserve better, kamu layak dicintai dan dirayakan dalam hal apapun!!. May Allah grant you what your heart truly desire, may Allah make everything you want good for you, so that may accept all your prayers and wishes babe thank you for accepting me.🥺🥺💗💗
-
-Sometimes, yang bisa diandelin hanya kamu sendiri, tapi jangan pernah kamu ngerasa sendiri, if you need someone to talk I'm here, and always here, masih punya diri kamu sendiri, kamu puna Tuhan, dan aku sayang!!
-Semoga hal baik selalu beriringan denganmu, semoga semesta selalu berpihak sama kamu, semoga jalanmu selalu di permudahkan, teruslah tumbuh, teruslah melangkah & berbahagia. Aku akan selalu bangga atas setiap proses yang sudah kamu lalui anak hebat anak kuat anak ganteng, selamat berkelana, I will always support you!!.💐💐💗💗
-
-From: your girlfriend (Elsaaaa)`;
+        const fullLetter = `
+        i feel so lucky to have met you thank you for everything you do for me when im sad, thank you for making me laugh in the middle of night, you really make me live, you are the best person i have. i've meet you and don't know how to describe you. you are the best person who helped me when i was lowest point, you are the person who always care about me, you are the best thing that every happened to mee, you mean a lot to me, thank you for always being there for me, i am so lucky to have you in my life
+        `;
 
         function goToPage(pageNum) {
             const pages = document.querySelectorAll('.page');
