--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://i.ibb.co.com/hXZsYxZ/heart.png">
-    <title>Happy Birthday My Mirlfriend!!</title>
+    <title>SENDIN' ALL MY LOVE TO YOU 💗🫶🏼🦋</title>
     <style>
         * {
             box-sizing: border-box;
