--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="icon" type="image/png" href="https://i.ibb.co.com/hXZsYxZ/heart.png">
     <title>SENDIN' ALL MY LOVE TO YOU 💗🫶🏼🦋</title>
     <style>
@@ -11,6 +11,45 @@
             box-sizing: border-box;
             margin: 0;
             padding: 0;
+        }
+
+        /* CSS khusus untuk perangkat mobile dengan address bar */
+        @media (max-width: 768px) {
+            :root {
+                --sat: env(safe-area-inset-top);
+                --sar: env(safe-area-inset-right);
+                --sab: env(safe-area-inset-bottom);
+                --sal: env(safe-area-inset-left);
+            }
+
+            body {
+                /* Pastikan konten tidak tertutup oleh address bar */
+                padding-bottom: constant(safe-area-inset-bottom);
+                padding-bottom: env(safe-area-inset-bottom);
+                height: 100vh;
+                height: calc(100vh - var(--sab));
+                overflow: hidden;
+            }
+
+            .page {
+                /* Gunakan min-height untuk fleksibilitas */
+                min-height: 100vh;
+                min-height: calc(100vh - var(--sab));
+                height: auto;
+                padding: 20px;
+                padding-bottom: calc(20px + var(--sab));
+                /* Tambahkan padding untuk area aman */
+            }
+
+            .letter-container {
+                max-height: 40vh;
+                /* Kurangi sedikit tinggi maksimum */
+            }
+
+            .music-control {
+                bottom: calc(20px + var(--sab));
+                /* Sesuaikan posisi tombol musik */
+            }
         }
 
         body {
