--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <div class="music-control" id="musicControl">♪</div>
 
     <audio id="bg-music" loop>
-        <source src="./lover - taylor swift.mp3" type="audio/mpeg">
+        <source src="./SnapTik.Net.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 
